apps/overlays/k3s-test-1/staging/podinfo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: istio-default
  hostnames:
    - "podinfo-staging.writefor.fun"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: podinfo
          port: 9898
          weight: 1
